Fixes layout issues

--- a/frontend/capstone-2/src/index.css
+++ b/frontend/capstone-2/src/index.css
@@ -24,5 +24,5 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 2000px;
+  /* max-width: 2000px; */
 }
