--- a/frontend/capstone-2/src/styles/Footer.css
+++ b/frontend/capstone-2/src/styles/Footer.css
@@ -8,7 +8,7 @@ footer {
   bottom: 0;
   left: 0;
   right: 0;
-  max-width: 2000px;
+  /* max-width: 2000px; */
   height: 30px;
   z-index: 100;
 }
