--- a/frontend/capstone-2/src/styles/Home.css
+++ b/frontend/capstone-2/src/styles/Home.css
@@ -1,9 +1,11 @@
 .home-container {
   margin: 1rem;
   padding: 1rem;
+  width: calc(100vw - 2rem);
   background-color: var(--color-background);
   border-radius: 8px;
   height: calc(100vh - 170px);
+  /* box-sizing: border-box; */
 }
 
 .hero-section {
