--- a/frontend/capstone-2/src/styles/Projects.css
+++ b/frontend/capstone-2/src/styles/Projects.css
@@ -1,6 +1,6 @@
 .projects-page {
   padding: 1rem;
-  max-width: 2000px;
+  /* max-width: 2000px; */
   margin: 1rem;
   background-color: var(--color-background);
   border-radius: 1rem;
